# 1400Tasks

./: CMakeLists.txt  README.md  main.cpp
include/: chapter_1.h  chapter_2.h  tests.h
src/: chapter_1.cpp  chapter_2.cpp  tests.cpp
